# wallets

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
src/core/: settings.py  urls.py
src/tests/: conftest.py
src/tests/wallets/: factories.py  test_api.py
src/wallets/: admin.py  models.py
src/wallets/api/v1/: serializers.py  urls.py  views.py
src/wallets/migrations/: 0001_initial.py
src/wallets/services/: create_transaction.py
